@startuml

title __SESSION's Class Diagram__\n

  namespace  {
    namespace ystem {
      namespace Session {
        class System.Session.AlarmTimer {
            - alarmLevel : int
            - alarmLifeTime : long
            - run : boolean
            - store : Store<StringCommand>
            - timerTask : Timer
            + AlarmTimer()
            + alarmDeactivated()
            + restart()
            + start()
        }
      }
    }
  }
  

  namespace  {
    namespace ystem {
      namespace Session {
        class System.Session.AlarmTimer.AlarmTimerThread {
            - mgsDeath : String
            - msg : String
            - msgAlert : String
            + AlarmTimerThread()
            + run()
        }
      }
    }
  }
  

  namespace  {
    namespace ystem {
      namespace Session {
        class System.Session.DoctorSessionThread {
            - run : boolean
            - sessionLength : int
            - store : Store<StringCommand>
            - timerTask : Timer
            + DoctorSessionThread()
            + interrupt()
            + restart()
            + start()
        }
      }
    }
  }
  

  namespace  {
    namespace ystem {
      namespace Session {
        class System.Session.DoctorSessionThread.SessionTimer {
            + SessionTimer()
            + run()
        }
      }
    }
  }
  

  System.Session.AlarmTimer o-- System.Session.AlarmTimer.AlarmTimerThread : alarmThread
  System.Session.AlarmTimer +-down- System.Session.AlarmTimer.AlarmTimerThread
  System.Session.AlarmTimer.AlarmTimerThread -up-|> java.util.TimerTask
  System.Session.DoctorSessionThread o-- System.Session.DoctorSessionThread.SessionTimer : sessionThread
  System.Session.DoctorSessionThread +-down- System.Session.DoctorSessionThread.SessionTimer
  System.Session.DoctorSessionThread.SessionTimer -up-|> java.util.TimerTask


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
